# todo_app

./: README.md
backend/: .gitignore  Cargo.toml  database.sqlite
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/routes/: +page.svelte  +page.ts
